updated few files, after minor corrections